@@ -582,14 +582,14 @@ my %commands =
                    'legal'   =>
                    {
                     %reg_legal,
+                    'admin'                        => 'integer',
                     'any'                          => 'bool',
                     'bad_approval'                 => 'bool',
                     'blind_copy'                   => 'bool',
                     'body_length'                  => 'integer',
                     'body_length_exceeded'         => 'bool',
-                    'taboo'                        => 'integer',
-                    'admin'                        => 'integer',
-                    'noarchive'                    => 'integer',
+		    'consecutive_posts'            => 'integer',
+		    'days_since_last_post'         => 'integer',
                     'days_since_subscribe'         => 'integer',
                     'dup'                          => 'bool',
                     'dup_msg_id'                   => 'bool',
@@ -610,10 +610,16 @@ my %commands =
                     'mime_require'                 => 'bool',
                     'mime'                         => 'bool',
                     'mode'                         => 'string',
+                    'noarchive'                    => 'integer',
 		    'nonempty_lines'               => 'integer',
                     'percent_quoted'               => 'integer',
                     'post_block'                   => 'bool',
+		    'posts'                        => 'integer',
+		    'posts_last_24hours'           => 'integer',
+		    'posts_last_7days'           => 'integer',
+		    'posts_last_30days'           => 'integer',
                     'quoted_lines'                 => 'integer',
+                    'taboo'                        => 'integer',
                     'total_header_length'          => 'integer',
                     'total_header_length_exceeded' => 'bool',
                    },
